@@ -38,7 +38,7 @@
             <div class="panel  panel-colorful panel-dark">
                 <div class="panel-body">
                     <div class="form-group">
-                        <label class="control-label">{% translate"Submit button name" %}</label>
+                        <label class="control-label">{% translate "Submit button name" %}</label>
                         {{ form.learning_submit_field }}
                         {{ form.learning_submit_field.errors }}
                     </div>
