@@ -45,22 +45,22 @@
             <div class="panel  panel-colorful panel-dark">
                 <div class="panel-body">
                     <div class="form-group">
-                        <label class="control-label">{% translate"Login field name" %}</label>
+                        <label class="control-label">{% translate "Login field name" %}</label>
                         {{ form.login_login_field }}
                         {{ form.login_login_field.errors }}
                     </div>
                     <div class="form-group">
-                        <label class="control-label">{% translate"Password field name" %}</label>
+                        <label class="control-label">{% translate "Password field name" %}</label>
                         {{ form.login_password_field }}
                         {{ form.login_password_field.errors }}
                     </div>
                     <div class="form-group">
-                        <label class="control-label">{% translate"Captcha field name" %}</label>
+                        <label class="control-label">{% translate "Captcha field name" %}</label>
                         {{ form.login_captcha_field }}
                         {{ form.login_captcha_field.errors }}
                     </div>
                     <div class="form-group">
-                        <label class="control-label">{% translate"Submit button field name" %}</label>
+                        <label class="control-label">{% translate "Submit button field name" %}</label>
                         {{ form.login_submit_field }}
                         {{ form.login_submit_field.errors }}
                     </div>
