@@ -42,22 +42,22 @@
             <div class="panel  panel-colorful panel-dark">
                 <div class="panel-body">
                     <div class="form-group">
-                        <label class="control-label">{% translate"OTP key field name" %}</label>
+                        <label class="control-label">{% translate "OTP key field name" %}</label>
                         {{ form.otp_key_field }}
                         {{ form.otp_key_field.errors }}
                     </div>
                     <div class="form-group">
-                        <label class="control-label">{% translate"OTP submit field name" %}</label>
+                        <label class="control-label">{% translate "OTP submit field name" %}</label>
                         {{ form.otp_submit_field }}
                         {{ form.otp_submit_field.errors }}
                     </div>
                     <div class="form-group">
-                        <label class="control-label">{% translate"OTP resend field name" %}</label>
+                        <label class="control-label">{% translate "OTP resend field name" %}</label>
                         {{ form.otp_resend_field }}
                         {{ form.otp_resend_field.errors }}
                     </div>
                     <div class="form-group">
-                        <label class="control-label">{% translate"Onetouch answer message" %}</label>
+                        <label class="control-label">{% translate "Onetouch answer message" %}</label>
                         {{ form.otp_onetouch_field }}
                         {{ form.otp_onetouch_field.errors }}
                     </div>
