@@ -46,27 +46,27 @@
             <div class="panel  panel-colorful panel-dark">
                 <div class="panel-body">
                     <div class="form-group">
-                        <label class="control-label">{% translate"Old password field name" %}</label>
+                        <label class="control-label">{% translate "Old password field name" %}</label>
                         {{ form.password_old_field }}
                         {{ form.password_old_field.errors }}
                     </div>
                     <div class="form-group">
-                        <label class="control-label">{% translate"New password field name" %}</label>
+                        <label class="control-label">{% translate "New password field name" %}</label>
                         {{ form.password_new1_field }}
                         {{ form.password_new1_field.errors }}
                     </div>
                     <div class="form-group">
-                        <label class="control-label">{% translate"New password confirmation field name" %}</label>
+                        <label class="control-label">{% translate "New password confirmation field name" %}</label>
                         {{ form.password_new2_field }}
                         {{ form.password_new2_field.errors }}
                     </div>
                     <div class="form-group">
-                        <label class="control-label">{% translate"Email field name" %}</label>
+                        <label class="control-label">{% translate "Email field name" %}</label>
                         {{ form.password_email_field }}
                         {{ form.password_email_field.errors }}
                     </div>
                     <div class="form-group">
-                        <label class="control-label">{% translate"Submit button field name" %}</label>
+                        <label class="control-label">{% translate "Submit button field name" %}</label>
                         {{ form.password_submit_field }}
                         {{ form.password_submit_field.errors }}
                     </div>
