@@ -50,37 +50,37 @@
             <div class="panel  panel-colorful panel-dark">
                 <div class="panel-body">
                     <div class="form-group">
-                        <label class="control-label">{% translate"Captcha field name" %}</label>
+                        <label class="control-label">{% translate "Captcha field name" %}</label>
                         {{ form.register_captcha_field }}
                         {{ form.register_captcha_field.errors }}
                     </div>
                     <div class="form-group">
-                        <label class="control-label">{% translate"Username field name" %}</label>
+                        <label class="control-label">{% translate "Username field name" %}</label>
                         {{ form.register_username_field }}
                         {{ form.register_username_field.errors }}
                     </div>
                     <div class="form-group">
-                        <label class="control-label">{% translate"Phone field name" %}</label>
+                        <label class="control-label">{% translate "Phone field name" %}</label>
                         {{ form.register_phone_field }}
                         {{ form.register_phone_field.errors }}
                     </div>
                     <div class="form-group">
-                        <label class="control-label">{% translate"Password field name" %}</label>
+                        <label class="control-label">{% translate "Password field name" %}</label>
                         {{ form.register_password1_field }}
                         {{ form.register_password1_field.errors }}
                     </div>
                     <div class="form-group">
-                        <label class="control-label">{% translate"Password confirmation field name" %}</label>
+                        <label class="control-label">{% translate "Password confirmation field name" %}</label>
                         {{ form.register_password2_field }}
                         {{ form.register_password2_field.errors }}
                     </div>
                     <div class="form-group">
-                        <label class="control-label">{% translate"Email field name" %}</label>
+                        <label class="control-label">{% translate "Email field name" %}</label>
                         {{ form.register_email_field }}
                         {{ form.register_email_field.errors }}
                     </div>
                     <div class="form-group">
-                        <label class="control-label">{% translate"Submit button name" %}</label>
+                        <label class="control-label">{% translate "Submit button name" %}</label>
                         {{ form.register_submit_field }}
                         {{ form.register_submit_field.errors }}
                     </div>
@@ -119,12 +119,12 @@
             <div class="panel  panel-colorful panel-dark">
                 <div class="panel-body">
                     <div class="form-group">
-                        <label class="control-label">{% translate"Registration email subject" %}</label>
+                        <label class="control-label">{% translate "Registration email subject" %}</label>
                         {{form.email_register_subject}}
                         {{form.email_register_subject.errors}}
                     </div>
                     <div class="form-group">
-                        <label class="control-label">{% translate"Registration email sender (from)" %}</label>
+                        <label class="control-label">{% translate "Registration email sender (from)" %}</label>
                         {{form.email_register_from}}
                         {{form.email_register_from.errors}}
                     </div>
