@@ -8,6 +8,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## [Unreleased]
 ### Fixed
 - [GUI] [FRONTEND] Bug allowing the creation of an http or tcp frontend without a listener
+- [TEMPLATE] Missing space after "translate" block tag
 
 
 ## [2.12.0]
